Update settings to be compatible with packaged version

--- a/conf/settings.conf
+++ b/conf/settings.conf
@@ -50,7 +50,10 @@ install:
 #- dracut
 #- initramfs
 - grubcfg
-- bootloader
+### Remove grub and uncomment bootloader when the
+### calamares package will be updated
+- grub
+#- bootloader
 - umount
 
 # Phase 3 - postinstall.
