Add a custom desktop entry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_custom_target(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
 
 # Subdirectories
 add_subdirectory(conf)
+add_subdirectory(data)
 
 # Install
 install(DIRECTORY branding/
