Install desktop entry elsewhere
Do not conflict with Calamares own calamares.desktop.
A live image preparation script will need to overwrite it with
our version.

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,2 +1,2 @@
 install(FILES calamares.desktop
-        DESTINATION ${XDG_APPS_INSTALL_DIR})
+        DESTINATION ${DATA_INSTALL_DIR}/liri-calamares-branding)
