Rename sddm configuration to Liri

--- a/modules/displaymanager/displaymanager.conf
+++ b/modules/displaymanager/displaymanager.conf
@@ -7,8 +7,8 @@ displaymanagers:
 
 #Enable the following settings to force a desktop environment in your displaymanager configuration file:
 defaultDesktopEnvironment:
-    executable: "hawaii-session"
-    desktopFile: "hawaii"
+    executable: "liri-session"
+    desktopFile: "liri"
 
 #If true, try to ensure that the user, group, /var directory etc. for the
 #display manager are set up correctly. This is normally done by the distribution
