--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,2 +1,2 @@
-install(FILES displaymanager.conf
+install(FILES displaymanager.conf unpackfs.conf
         DESTINATION ${SYSCONF_INSTALL_DIR}/calamares/modules)
