--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,2 +1,2 @@
-install(FILES displaymanager.conf initcpio.conf unpackfs.conf
+install(FILES bootloader.conf displaymanager.conf grubcfg.conf initcpio.conf unpackfs.conf
         DESTINATION ${SYSCONF_INSTALL_DIR}/calamares/modules)
