Install missing kernel

--- a/conf/settings.conf
+++ b/conf/settings.conf
@@ -78,6 +78,7 @@ sequence:
 #  - luksbootkeyfile
 #  - luksopenswaphookcfg
   - initcpiocfg
+  - packages
   - initcpio
   - users
   - displaymanager
