Remove installer packages
Use packages operation again.

--- a/settings/packages.conf
+++ b/settings/packages.conf
@@ -13,7 +13,7 @@
 #
 backend: pacman
 
-update_db: true
+update_db: false
 
 #
 # List of maps with package operations such as install or remove.
@@ -30,8 +30,6 @@ update_db: true
 # after the static list in the job configuration.
 #
 operations:
-  - install:
-      - linux
   - remove:
-      - liri-calamares-branding-git
-      - calamares
+    - liri-calamares-branding-git
+    - calamares
