Update for Fedora

--- a/settings/packages.conf
+++ b/settings/packages.conf
@@ -11,7 +11,7 @@
 #  - portage	 - Gentoo package manager
 #  - entropy	 - Sabayon package manager
 #
-backend: pacman
+backend: dnf
 
 update_db: false
 
@@ -30,6 +30,6 @@ update_db: false
 # after the static list in the job configuration.
 #
 operations:
-  - remove:
-    - liri-calamares-branding-git
+  - try_remove:
+    - liri-calamares-branding
     - calamares
