--- a/settings/settings.conf
+++ b/settings/settings.conf
@@ -77,18 +77,18 @@ sequence:
   - localecfg
 #  - luksbootkeyfile
 #  - luksopenswaphookcfg
-  - initcpiocfg
+#  - dracutlukscfg
   - prepare
-  - packages
-  - initcpio
   - removeuser
   - users
   - displaymanager
   - networkcfg
   - hwclock
   - services
+  - dracut
   - grubcfg
   - bootloader
+  - packages
   - umount
 - show:
   - finished
