--- a/settings/unpackfs.conf
+++ b/settings/unpackfs.conf
@@ -1,5 +1,5 @@
 ---
 unpack:
-  - source: "/run/archiso/bootmnt/liri/x86_64/airootfs.sfs"
-    sourcefs: "squashfs"
+  - source: "/dev/mapper/live-base"
+    sourcefs: "ext4"
     destination: ""
