--- a/settings/bootloader.conf
+++ b/settings/bootloader.conf
@@ -1,7 +1,7 @@
 ---
 # Define which bootloader you want to use for EFI installations
 # Possible options are 'grub' and 'systemd-boot'.
-efiBootLoader: "grub"
+efiBootLoader: "systemd-boot"
 
 # systemd-boot configuration files settings, set kernel and initramfs file names
 # and amount of time before default selection boots
@@ -17,11 +17,11 @@ timeout: "10"
 
 # GRUB 2 binary names and boot directory
 # Some distributions (e.g. Fedora) use grub2-* (resp. /boot/grub2/) names.
-grubInstall: "grub-install"
-grubMkconfig: "grub-mkconfig"
-grubCfg: "/boot/grub/grub.cfg"
+grubInstall: "grub2-install"
+grubMkconfig: "grub2-mkconfig"
+grubCfg: "/boot/grub2/grub.cfg"
 # Optionally set the --bootloader-id to use for EFI. If not set, this defaults
 # to the bootloaderEntryName from branding.desc with problematic characters
 # replaced. If an efiBootloaderId is specified here, it is taken to already be a
 # valid directory name, so no such postprocessing is done in this case.
-# efiBootloaderId: "dirname"
+efiBootloaderId: "lirios"
