Run Calamares with xcb
Running with the wayland QPA plugin crashes our compositor for
reasons that we don't understand yet.

--- a/data/calamares.desktop
+++ b/data/calamares.desktop
@@ -3,7 +3,7 @@ Type=Application
 Version=1.0
 Name=Install to Hard Disk Drive
 GenericName=Live Installer
-Exec=sudo -E /usr/bin/calamares --platform wayland
+Exec=/usr/bin/calamares.sh
 Icon=system-software-install
 Terminal=false
 StartupNotify=false
