--- a/settings/settings.conf
+++ b/settings/settings.conf
@@ -69,7 +69,8 @@ sequence:
 - exec:
   - partition
   - mount
-  - unpackfs
+##  - unpackfs
+  - ostree
   - machineid
   - fstab
   - locale
@@ -78,17 +79,17 @@ sequence:
 #  - luksbootkeyfile
 #  - luksopenswaphookcfg
 #  - dracutlukscfg
-  - prepare
-  - removeuser
+##  - prepare
+##  - removeuser
   - users
-  - displaymanager
-  - networkcfg
+##  - displaymanager
+##  - networkcfg
   - hwclock
-  - services
-  - dracut
-  - grubcfg
-  - bootloader
-  - packages
+##  - services
+##  - dracut
+##  - grubcfg
+##  - bootloader
+##  - packages
   - umount
 - show:
   - finished
