--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,1 +1,2 @@
 install(DIRECTORY "prepare/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/prepare")
+install(DIRECTORY "ostree/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/ostree")
