ostree: Move installation code to an external process
Turns out the Calamares Python interpreter freezes when we load
gobject-introspection, so we move the code to an external
process that communicates with pipes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(branding)
 add_subdirectory(data)
 add_subdirectory(modules)
 add_subdirectory(settings)
+add_subdirectory(src/ostree-install)
