Update settings for OSTree
Completely remove those steps that are no longer relevant.

--- a/settings/settings.conf
+++ b/settings/settings.conf
@@ -69,7 +69,6 @@ sequence:
 - exec:
   - partition
   - mount
-##  - unpackfs
   - ostree
   - machineid
   - fstab
@@ -79,17 +78,13 @@ sequence:
 #  - luksbootkeyfile
 #  - luksopenswaphookcfg
 #  - dracutlukscfg
-##  - prepare
-##  - removeuser
   - users
-##  - displaymanager
-##  - networkcfg
+  - displaymanager
+  - networkcfg
   - hwclock
 ##  - services
-##  - dracut
 ##  - grubcfg
 ##  - bootloader
-##  - packages
   - umount
 - show:
   - finished
