Enable grubcfg and bootloader modules

--- a/settings/settings.conf
+++ b/settings/settings.conf
@@ -83,8 +83,8 @@ sequence:
   - networkcfg
   - hwclock
 ##  - services
-##  - grubcfg
-##  - bootloader
+  - grubcfg
+  - bootloader
   - umount
 - show:
   - finished
