ostree-finalize: Swap root mount points
Run the umount job before and after this one to:

1. Unmount the new root mount point
2. Swap the new root mount point with the old one
3. Unmount the old root mount point

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,2 +1,3 @@
 install(DIRECTORY "prepare/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/prepare")
 install(DIRECTORY "ostree/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/ostree")
+install(DIRECTORY "ostree-finalize/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/ostree-finalize")
