ostree: Configure URL and ref

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,3 +1,4 @@
 install(DIRECTORY "prepare/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/prepare")
 install(DIRECTORY "ostree/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/ostree")
 install(DIRECTORY "ostree-finalize/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/ostree-finalize")
+install(FILES "ostree/ostree.conf" DESTINATION "${INSTALL_DATADIR}/calamares/modules")
