Enable services during installation

--- a/settings/CMakeLists.txt
+++ b/settings/CMakeLists.txt
@@ -4,6 +4,7 @@ install(
         "bootloader.conf"
         "displaymanager.conf"
         "grubcfg.conf"
+        "services.conf"
         "welcome.conf"
     DESTINATION
         "${INSTALL_SYSCONFDIR}/calamares/modules"
