ostree-bootloader: Customize bootloader installation
Customize for OSTree.

--- a/settings/settings.conf
+++ b/settings/settings.conf
@@ -83,8 +83,7 @@ sequence:
   - networkcfg
   - hwclock
   - services
-  - grubcfg
-  - bootloader
+  - ostree-bootloader
   - umount
   - ostree-finalize
   - umount
