ostree: Rename configuration keys
The 'ostree' name here is redundant.

--- a/modules/ostree/ostree.conf
+++ b/modules/ostree/ostree.conf
@@ -2,7 +2,7 @@
 
 # Remote OSTree repository to download the OS tree from
 # if there is no local repository in /ostree/repo
-ostreeUrl: https://repo.liri.io/ostree/repo/
+url: https://repo.liri.io/ostree/repo/
 
 # OSTree ref to install
-ostreeRef: lirios/unstable/${basearch}/desktop
+ref: lirios/unstable/${basearch}/desktop
