--- a/settings/settings.conf
+++ b/settings/settings.conf
@@ -82,7 +82,7 @@ sequence:
   - displaymanager
   - networkcfg
   - hwclock
-  - services
+  - services-systemd
   - ostree-bootloader
   - ostree-finalize
   - umount
