--- a/settings/CMakeLists.txt
+++ b/settings/CMakeLists.txt
@@ -2,7 +2,7 @@ install(FILES "settings.conf" DESTINATION "${INSTALL_SYSCONFDIR}/calamares")
 install(
     FILES
         "displaymanager.conf"
-        "services.conf"
+        "services-systemd.conf"
         "welcome.conf"
     DESTINATION
         "${INSTALL_SYSCONFDIR}/calamares/modules"
