Add Live Welcome
Add an application that welcomes the users to the live media, and
prompts them to either continue trying the OS or installing it.

Also, slightly change Calamares desktop entry title.

--- a/data/calamares.desktop
+++ b/data/calamares.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-Name=Install to Hard Disk Drive
+Name=Install to Hard Drive
 GenericName=Live Installer
 Exec=/usr/bin/calamares.sh
 Icon=system-software-install
