--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,21 +44,10 @@ jobs:
             qtdeclarative5-dev \
             qtquickcontrols2-5-dev \
             qttools5-dev
-      - name: Fetch cmake-shared artifact
-        uses: liri-infra/fetch-artifact@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          repository: lirios/cmake-shared
-          workflow_path: .github/workflows/build.yml
-          artifact_name: artifacts-${{ steps.extract_branch.outputs.branch }}
-          save_as: cmake-shared.zip
-      - name: Uncompress artifacts
+      - name: Fetch and uncompress artifacts
         run: |
           set -x
-          for what in cmake-shared; do
-              sudo tar xf ${what}.tar.gz -C /
-              rm -f ${what}.zip ${what}.tar.gz
-          done
+          curl -L -o - "https://dl.bintray.com/liri/artifacts-${{ steps.extract_branch.outputs.branch }}/cmake-shared.tar.gz" | sudo tar -xz -f - -C /
       - uses: actions/checkout@v2
       - name: Build
         run: |
