--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         compiler:
           - gcc
           - clang
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Extract branch name
         id: extract_branch
@@ -44,11 +44,11 @@ jobs:
             qtdeclarative5-dev \
             qtquickcontrols2-5-dev \
             qttools5-dev
-      - name: Fetch and uncompress artifacts
+      - uses: actions/checkout@v2
+      - name: Build dependencies
         run: |
           set -x
-          curl -L -o - "https://dl.bintray.com/liri/artifacts-${{ steps.extract_branch.outputs.branch }}/cmake-shared.tar.gz" | sudo tar -xz -f - -C /
-      - uses: actions/checkout@v2
+          ./.github/workflows/scripts/build-deps ${{ steps.extract_branch.outputs.branch }}
       - name: Build
         run: |
           set -x
