Port to Qt 6 and use ECM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,30 +6,29 @@ project("CalamaresBranding"
     LANGUAGES CXX C
 )
 
-## Shared macros and functions:
-if(NOT LIRI_LOCAL_ECM)
-    find_package(LiriCMakeShared "2.0.0" REQUIRED NO_MODULE)
-    list(APPEND CMAKE_MODULE_PATH "${LCS_MODULE_PATH}")
-endif()
-
-## Set minimum versions required:
-set(QT_MIN_VERSION "5.15.0")
-
-## Add some paths to check for CMake modules:
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-
-## Liri specific setup common for all modules:
-include(LiriSetup)
-
 ## Only build on the appropriate platforms.
-if(NOT (LINUX OR NOT ANDROID))
-    message(NOTICE "Skipping the build as the condition \"LINUX OR NOT ANDROID\" is not met.")
+if(NOT (LINUX OR NOT CMAKE_SYSTEM_NAME MATCHES "Android"))
+    message(NOTICE "Skipping the build as the condition \"LINUX OR NOT Android\" is not met.")
     return()
 endif()
 
+## ECM:
+find_package(ECM 5.245.0 REQUIRED NO_MODULE)
+list(APPEND CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
+
+## Installation directories:
+include(KDEInstallDirs)
+
+## Compiler settings:
+set(KDE_SKIP_NULLPTR_WARNINGS_SETTINGS TRUE)
+include(KDECompilerSettings NO_POLICY_SCOPE)
+
+## CMake settings:
+include(KDECMakeSettings)
+
 ## Find Qt 5:
-find_package(Qt5 "${QT_MIN_VERSION}"
-    CONFIG REQUIRED
+find_package(Qt6
+    REQUIRED
     COMPONENTS
         Core
         Gui
