--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,2 +1,2 @@
-install(FILES "calamares.desktop" DESTINATION "${INSTALL_DATADIR}/liri-calamares-branding")
-install(PROGRAMS calamares.sh DESTINATION "${INSTALL_BINDIR}")
+install(FILES "calamares.desktop" DESTINATION "${KDE_INSTALL_DATADIR}/liri-calamares-branding")
+install(PROGRAMS calamares.sh DESTINATION "${KDE_INSTALL_BINDIR}")
