--- a/settings/CMakeLists.txt
+++ b/settings/CMakeLists.txt
@@ -1,9 +1,9 @@
-install(FILES "settings.conf" DESTINATION "${INSTALL_SYSCONFDIR}/calamares")
+install(FILES "settings.conf" DESTINATION "${KDE_INSTALL_SYSCONFDIR}/calamares")
 install(
     FILES
         "displaymanager.conf"
         "services-systemd.conf"
         "welcome.conf"
     DESTINATION
-        "${INSTALL_SYSCONFDIR}/calamares/modules"
+        "${KDE_INSTALL_SYSCONFDIR}/calamares/modules"
 )
