--- a/src/ostree-install/CMakeLists.txt
+++ b/src/ostree-install/CMakeLists.txt
@@ -1,1 +1,1 @@
-install(PROGRAMS calamares-ostree-install DESTINATION "${INSTALL_BINDIR}")
+install(PROGRAMS calamares-ostree-install DESTINATION "${KDE_INSTALL_BINDIR}")
