--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,6 +1,6 @@
-install(DIRECTORY "prepare/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/prepare")
-install(DIRECTORY "ostree/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/ostree")
-install(DIRECTORY "ostree-bootloader/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/ostree-bootloader")
-install(DIRECTORY "ostree-finalize/" DESTINATION "${INSTALL_LIBDIR}/calamares/modules/ostree-finalize")
-install(FILES "ostree/ostree.conf" DESTINATION "${INSTALL_DATADIR}/calamares/modules")
-install(FILES "ostree-bootloader/ostree-bootloader.conf" DESTINATION "${INSTALL_DATADIR}/calamares/modules")
+install(DIRECTORY "prepare/" DESTINATION "${KDE_INSTALL_LIBDIR}/calamares/modules/prepare")
+install(DIRECTORY "ostree/" DESTINATION "${KDE_INSTALL_LIBDIR}/calamares/modules/ostree")
+install(DIRECTORY "ostree-bootloader/" DESTINATION "${KDE_INSTALL_LIBDIR}/calamares/modules/ostree-bootloader")
+install(DIRECTORY "ostree-finalize/" DESTINATION "${KDE_INSTALL_LIBDIR}/calamares/modules/ostree-finalize")
+install(FILES "ostree/ostree.conf" DESTINATION "${KDE_INSTALL_DATADIR}/calamares/modules")
+install(FILES "ostree-bootloader/ostree-bootloader.conf" DESTINATION "${KDE_INSTALL_DATADIR}/calamares/modules")
