--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2023 Pier Luigi Fiorini <pierluigi.fiorini@gmail.com>
+# SPDX-License-Identifier: CC0-1.0
+
 name: CI
 
 on:
@@ -5,59 +8,13 @@ on:
     branches:
       - master
       - develop
+    tags:
+      - v*
   pull_request:
     branches:
       - master
       - develop
 
 jobs:
-  neon:
-    if: "!contains(github.event.head_commit.message, 'ci skip')"
-    strategy:
-      matrix:
-        compiler:
-          - gcc
-          - clang
-    runs-on: ubuntu-latest
-    steps:
-      - name: Extract branch name
-        id: extract_branch
-        shell: bash
-        run: |
-          if [ -n "${{ github.base_ref }}" ]; then
-            echo "##[set-output name=branch;]${{ github.base_ref }}"
-          else
-            github_ref=${{ github.ref }}
-            echo "##[set-output name=branch;]${github_ref##*/}"
-          fi
-      - name: Install dependencies
-        run: |
-          set -x
-          wget -qO - 'http://archive.neon.kde.org/public.key' | sudo apt-key add -
-          sudo apt-add-repository http://archive.neon.kde.org/user
-          sudo apt-get update
-          sudo apt-get install -y \
-            extra-cmake-modules \
-            dbus-x11 \
-            xvfb \
-            qtbase5-dev \
-            qtdeclarative5-dev \
-            qtquickcontrols2-5-dev \
-            qttools5-dev
-      - uses: actions/checkout@v2
-      - name: Build dependencies
-        run: |
-          set -x
-          ./.github/workflows/scripts/build-deps ${{ steps.extract_branch.outputs.branch }}
-      - name: Build
-        run: |
-          set -x
-          if [ "${{ matrix.compiler }}" == "clang" ]; then
-            export CC=clang
-            export CXX=clang++
-          fi
-          mkdir -p build
-          cd build
-          cmake .. -DCMAKE_INSTALL_PREFIX=/usr
-          make -j $(getconf _NPROCESSORS_ONLN)
-          sudo make install
+  build-qt6:
+    uses: lirios/.github/.github/workflows/build-linux-qt6.yml@master
