--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2023 Pier Luigi Fiorini <pierluigi.fiorini@gmail.com>
+# SPDX-License-Identifier: CC0-1.0
+
 name: Checks
 
 on:
@@ -14,33 +17,10 @@ on:
       - reopened
       - edited
 
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
-  wip:
-    if: "!contains(github.event.head_commit.message, 'ci skip') && github.event_name == 'pull_request'"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Work in progress
-        uses: wip/action@master
-  xdg:
-    if: "!contains(github.event.head_commit.message, 'ci skip')"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-      - name: Validate XDG files
-        uses: liri-infra/xdg-validator-action@master
-        with:
-          strict: false
-  qml:
-    if: "!contains(github.event.head_commit.message, 'ci skip')"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-      - name: Validate QML and JavaScript files
-        uses: liri-infra/qmllint-action@master
+  checks:
+    uses: lirios/.github/.github/workflows/checks.yml@master
+    with:
+      enable_wip: true
+      enable_xdg: true
+      enable_qml: true
